Make sure editor map is centered if window is resized while the text form is visible

--- a/less/app.less
+++ b/less/app.less
@@ -618,6 +618,12 @@ section#the-goods { margin-top: 44px; }
             }
         }
 
+        .edit-address-map {
+            p {
+                padding-left: 15px;
+            }
+        }
+
         .edit-address-footer {
             position: absolute;
             bottom: 0;
@@ -638,6 +644,7 @@ section#the-goods { margin-top: 44px; }
             li {
                 display: table-cell;
                 width: 50%;
+                float: none;
                 background: @secondaryControl;
 
                 &.active {
@@ -1016,18 +1023,33 @@ section#the-goods { margin-top: 44px; }
             position: fixed;
             overflow: hidden;
             z-index: 10000;
+            width: 50%;
+            left: 50%;
+            margin-left: -25%;
+            top: 10%;
+            bottom: 10%;
 
             #edit-map,
             #address-pane {
                 top: 100px;
             }
 
-            @media @screen-tiny-above {
-                width: 50%;
+
+            @media @screen-medium {
+                width: 80%;
                 left: 50%;
-                margin-left: -25%;
+                margin-left: -40%;
                 top: 10%;
                 bottom: 10%;
+            }
+
+            @media @screen-tiny {
+                top: 0;
+                left: 0;
+                bottom: 0;
+                right: 0;
+                width: 100%;
+                margin-left: 0;
             }
         }
 
